# Smartcomply-Assessment

./: .gitignore  Answers.md  Dockerfile  README.md  pyproject.toml
src/: api.py  config.py  core.py  data.py  schema.py  utils.py
src/chroma_db/: chroma.sqlite3
