[project]
name = "assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.106.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.49.0",
]
